css body overflow fix

--- a/style.css
+++ b/style.css
@@ -32,8 +32,6 @@ html,body{
 	background:#FFF;
 	font-family: Tahoma, Arial, sans-serif;
 	color:#333;
-	overflow: hidden;
-	-webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 em{
 	font-style: italic;
